Fix z-index from Toast component (#24)

--- a/src/core/components/Toast.styl
+++ b/src/core/components/Toast.styl
@@ -14,6 +14,7 @@
   transition: transform 0.3s ease;
   width: 100%;
   will-change: transform;
+  z-index: 50;
 
   +aboveMedium() {
     border-radius: 8px;
